<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCitaCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="12dp"
...
                    android:layout_height="wrap_content"
                    android:text="Fecha y Hora"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvMiCitaFechaHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2026-06-30 a las 15:30"
                    android:textColor="#1A1B2E"
                    android:textStyle="bold" />
            </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:text="Servicio"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvMiCitaServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Corte de Cabello"
                    android:textColor="#1A1B2E"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCancelCita"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/error_red"
            android:text="Cancelar Cita"
            android:textAllCaps="false"
...
